unpackaged/main/default/objects/Risk_Check__c/Risk_Check__c.object-meta.xml
<CustomObject>
    <label>Risk Check</label>
    <nameField>
        <label>Risk Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>