unpackaged/main/default/objects/Risk_Check__c/fields/checked_revenue__c.field-meta.xml
<CustomField>
    <fullName>checked_revenue__c</fullName>
    <label>Checked Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>