unpackaged/main/default/objects/Risk_Check__c/fields/Expected_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Expected_Turnover__c</fullName>
    <inlineHelpText>Please enter this company&#39;s expected annual turnover.</inlineHelpText>
    <label>Expected Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>