unpackaged/main/default/objects/Risk_Check__c/fields/expiration_date__c.field-meta.xml
<CustomField>
    <fullName>expiration_date__c</fullName>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>