unpackaged/main/default/objects/Risk_Check__c/fields/First_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>First_Status_Change__c</fullName>
    <description>set in PB_RISK_CHECK_UPDATE</description>
    <label>First Status Change</label>
    <type>Date</type>
</CustomField>