unpackaged/main/default/objects/Risk_Check__c/fields/High_priority__c.field-meta.xml
<CustomField>
    <fullName>High_priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High priority</label>
    <type>Checkbox</type>
</CustomField>