unpackaged/main/default/objects/Risk_Check__c/fields/internal_comment__c.field-meta.xml
<CustomField>
    <fullName>internal_comment__c</fullName>
    <label>Internal Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>