unpackaged/main/default/objects/Risk_Check__c/fields/public_comment__c.field-meta.xml
<CustomField>
    <fullName>public_comment__c</fullName>
    <label>Public Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>