unpackaged/main/default/objects/Risk_Check__c/fields/Rating_Agency__c.field-meta.xml
<CustomField>
    <fullName>Rating_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rating Agency</label>
    <type>Checkbox</type>
</CustomField>