unpackaged/main/default/objects/Risk_Check__c/fields/Received_basic_framework__c.field-meta.xml
<CustomField>
    <fullName>Received_basic_framework__c</fullName>
    <label>Received basic framework</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>