unpackaged/main/default/objects/Risk_Check__c/fields/received_primary_framework__c.field-meta.xml
<CustomField>
    <fullName>received_primary_framework__c</fullName>
    <label>Received primary framework</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>