unpackaged/main/default/objects/Risk_Check__c/fields/requested_at_atradius__c.field-meta.xml
<CustomField>
    <fullName>requested_at_atradius__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested at Atradius</label>
    <type>Checkbox</type>
</CustomField>