unpackaged/main/default/objects/Risk_Check__c/fields/Requested_guarantee_framework__c.field-meta.xml
<CustomField>
    <fullName>Requested_guarantee_framework__c</fullName>
    <label>Requested guarantee framework</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>