unpackaged/main/default/objects/Risk_Check__c/fields/Requested_Guarantee_Period__c.field-meta.xml
<CustomField>
    <fullName>Requested_Guarantee_Period__c</fullName>
    <description>only applicable to Customers</description>
    <inlineHelpText>in days</inlineHelpText>
    <label>Requested Guarantee Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>