unpackaged/main/default/objects/Risk_Check__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>completely accepted</fullName>
            </value>
            <value>
                <fullName>denied</fullName>
            </value>
            <value>
                <fullName>Not OK</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>partly accepted – insufficient</fullName>
                <isActive>false</isActive>
                <label>partly accepted – insufficient</label>
            </value>
            <value>
                <fullName>partly accepted – probably sufficient</fullName>
                <isActive>false</isActive>
                <label>partly accepted – probably sufficient</label>
            </value>
            <value>
                <fullName>probably sufficient</fullName>
                <isActive>false</isActive>
                <label>probably sufficient</label>
            </value>
            <value>
                <fullName>propably insufficient</fullName>
                <isActive>false</isActive>
                <label>propably insufficient</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>