unpackaged/main/default/objects/Risk_Check__c/fields/Risk_Check_Owner__c.field-meta.xml
<CustomField>
    <fullName>Risk_Check_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Check Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Risk Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Risk_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>