unpackaged/main/default/objects/Risk_Check__c/fields/Risk_Number__c.field-meta.xml
<CustomField>
    <fullName>Risk_Number__c</fullName>
    <label>Risk Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>