unpackaged/main/default/objects/Risk_Check__c/validationRules/Annual_Revenue_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.RecordType.DeveloperName = &quot;Prospect&quot;
&amp;&amp;
ISBLANK(Account__r.AnnualRevenue)</errorConditionFormula>
    <errorMessage>The Annual Revenue has to be filled in on the Account to create a Risk Check</errorMessage>
</ValidationRule>