unpackaged/main/default/objects/Risk_Check__c/listViews/Completed_Risk_Checks.listView-meta.xml
<ListView>
    <fullName>Completed_Risk_Checks</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>High_priority__c</columns>
    <columns>Risk_Check_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Created_by_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed,Canceled,Not necessary</value>
    </filters>
    <filters>
        <field>Result__c</field>
        <operation>equals</operation>
        <value>denied,Not OK</value>
    </filters>
    <label>Completed Risk Checks</label>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>