unpackaged/main/default/objects/Risk_Check__c/listViews/Open_Risk_Checks_All.listView-meta.xml
<ListView>
    <fullName>Open_Risk_Checks_All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>High_priority__c</columns>
    <columns>Risk_Check_Owner__c</columns>
    <columns>Expected_Turnover__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Created_by_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Canceled,Not necessary</value>
    </filters>
    <label>Open Risk Checks - All</label>
</ListView>