unpackaged/main/default/objects/Risk_Check__c/listViews/Open_Risk_Checks_Compliance.listView-meta.xml
<ListView>
    <fullName>Open_Risk_Checks_Compliance</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>High_priority__c</columns>
    <columns>Risk_Check_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Canceled,Not necessary</value>
    </filters>
    <filters>
        <field>Created_by_Role__c</field>
        <operation>equals</operation>
        <value>Compliance</value>
    </filters>
    <label>Open Risk Checks - Compliance</label>
    <sharedTo>
        <role>Director_Trust_Services</role>
        <roleAndSubordinatesInternal>Teamlead_Risk</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>